<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check"
        android:contentDescription="@string/check_box_icon" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="390dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:paddingBottom="10dp">


            <EditText
                android:id="@+id/inputUserName"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/account_circle_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/inputUserEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputUserEmail"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/ubuntu"
                android:hint="email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

            <EditText
                android:id="@+id/PasswordConfirm"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/lock_ic"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/ubuntu"
                android:hint="Confirm password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/lock_ic"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUserEmail" />


            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.Material3.Button"
                android:layout_width="275dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#2B401D"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/registerBtn"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PasswordConfirm" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/already_have_an_account_login"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>